logs/mathbench.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MathBench-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/Yapsy-1.11.223.egg-info'...
Listing './lib/python3.5/site-packages/mathbench'...
Listing './lib/python3.5/site-packages/mathbench/basement'...
Listing './lib/python3.5/site-packages/mathbench/ext'...
Listing './lib/python3.5/site-packages/mathbench/lab'...
Compiling './lib/python3.5/site-packages/mathbench/lab/logbook.py'...
***   File "./lib/python3.5/site-packages/mathbench/lab/logbook.py", line 47
    print txt
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mathbench/lab/notebook.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (notebook.py, line 392)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yapsy'...
Listing './share'...
Listing './share/python-wheels'...
